--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -3,5 +3,7 @@
   "aboutUsNav": "About us",
   "servicesNav": "Services",
   "contactUsNav": "Contact us",
-  "locationNav": "Location"
+  "locationNav": "Location",
+  "AboutUsTitle": "About Dr. Carlos Regalado",
+  "AboutsParagraf": ""
 }
