--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -3,7 +3,5 @@
   "aboutUsNav": "About us",
   "servicesNav": "Services",
   "contactUsNav": "Contact us",
-  "locationNav": "Location",
-  "AboutUsTitle": "About Dr. Carlos Regalado",
-  "AboutsParagraf": ""
+  "locationNav": "Location"
 }
