--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -3,5 +3,35 @@
   "aboutUsNav": "About us",
   "servicesNav": "Services",
   "contactUsNav": "Contact us",
-  "locationNav": "Location"
+  "locationNav": "Location",
+  "page1Title1": "CECIP",
+  "page1Title2": "OB/GYN Surgeon",
+  "page1SubTitle": "Medical specialty that specializes in providing care to women throughout their lives, including pregnancy and childbirth, as well as providing diagnosis and treatment for diseases of the female reproductive organs.",
+  "page1EmailTitle": "Our email adress",
+  "page1CopyButton": "Get Copied",
+  "page1CopyButton2": "Copied",
+  "page1VaginalRejuvenationButton": "Learn about vaginal rejuvenation",
+  "page1PatientsSubtitle": "patients have chosen his service",
+  "page2AboutTitle": "About Dr. Carlos Regalado",
+  "page2AboutText": "About Dr. Carlos Regalado",
+  "page3ServiceTitle": "Our Services",
+  "page3Card1Title": "Vaginoplasty",
+  "page3Card1ShortText": "It is the aesthetic improvement by surgical means of the vulvar structures, designed to beautify and rejuvenate.",
+  "page3Card1LargeText": "It is the aesthetic improvement by surgical means of the vulvar structures, designed to beautify and rejuvenate. With this procedure, both the woman and her partner manage to increase and improve sexual relations.",
+  "page3Card2Title": "Gynecology",
+  "page3Card2ShortText": "A field of medicine that specializes in the care of women during pregnancy and childbirth.",
+  "page3Card2LargeText": "A field of medicine that specializes in the care of women during pregnancy and childbirth. He also specializes in the diagnosis of diseases of the female reproductive organs.",
+  "page3Card3Title": "Labiaplasty",
+  "page3Card3ShortText": "It is a vaginal surgery to reduce the size of the labia minora of the intimate part of the woman.",
+  "page3Card3LargeText": "It is a vaginal surgery to reduce the size of the labia minora of the intimate part of the woman. That may have increased in volume and protrude over the labia majora, normally as a result of pregnancy or birth trauma or other types of injuries. ",
+  "page4CarouselTitle": "Vaginal Rejuvenation Methods",
+  "carouselSlide1Title": "Vaginoplasty",
+  "carouselSlide1Text": "Vaginoplasty is a vaginal rejuvenation surgery whose objective is to correct the distension of the vaginal canal tissues and to recover the tonicity and contraction capacity of the vaginal muscles. Vaginoplasty is a vaginal rejuvenation surgery whose objective is to correct the distension of the vaginal canal tissues and to recover the tonicity and contraction capacity of the vaginal muscles.",
+  "carouselSlide2Title": "Perinoplasty",
+  "carouselSlide2Text": "Perineoplasty is called functional and aesthetic repair of the perineum, that is, the area that includes from the introitus of the vagina to the anus. Its fundamental objective is to correct all the damage produced in childbirth, as well as to reduce the amplitude of the introitus and to eradicate the vaginal noises that occur during sexual intercourse.",
+  "carouselSlide3Title": "Labiaplasty",
+  "carouselSlide3Text": "Labiaplasty is a surgical intervention that seeks to reduce the size of the vaginal lips. Normally it consists of reducing the labia minora. Labiaplasty is a surgical intervention that seeks to reduce the size of the vaginal lips. Normally it consists of reducing the labia minora.",
+  "carouselSlide4Title": "Hymenoplasty",
+  "carouselSlide4Text": "Hymenoplasty, also known as hymen restoration surgery, is a surgical intervention that aims to reconstruct said skin membrane located in the lower half of the vagina. Hymenoplasty, also known as hymen restoration surgery, is a surgical intervention that aims to reconstruct said skin membrane located in the lower half of the vagina.",
+  "footerSubTitle": "Follow me on my Instagram social network, to see more content related to my service."
 }
