--- a/src/languages/es.json
+++ b/src/languages/es.json
@@ -1,7 +1,37 @@
 {
   "homeNav": "Home",
-  "aboutUsNav": "Sobre nosotros",
+  "aboutMeNav": "Sobre mí",
   "servicesNav": "Servicios",
   "contactUsNav": "Contáctanos",
-  "locationNav": "Ubicación"
+  "locationNav": "Ubicación",
+  "page1Title1": "CECIP",
+  "page1Title2": "Cirujano ginecobstetra",
+  "page1SubTitle": "Especialidad médica que se especializa en brindar atención a la mujer a lo largo de su vida, incluido el embarazo y el parto, así como brindar diagnóstico y tratamiento para las enfermedades de los órganos reproductores femeninos.",
+  "page1EmailTitle": "Nuestro correo electrónico",
+  "page1CopyButton": "Copiar",
+  "page1CopyButton2": "Copiado",
+  "page1VaginalRejuvenationButton": "Más información sobre el rejuvenecimiento vaginal",
+  "page1PatientsSubtitle": "pacientes han elegido su servicio",
+  "page2AboutTitle": "Sobre el Dr. Carlos Regalado",
+  "page2AboutText": "About Dr. Carlos Regalado",
+  "page3ServiceTitle": "Nuestros servicios",
+  "page3Card1Title": "Vaginoplastia",
+  "page3Card1ShortText": "Es el mejoramiento estético por medio quirúrgico de las estructuras   vulvares, diseñado para embellecer y rejuvenecer",
+  "page3Card1LargeText": "Es el mejoramiento estético por medio quirúrgico de las estructuras vulvares, diseñado para embellecer y rejuvenecer. Con este procedimiento tanto la mujer como su pareja logran aumentar y mejorar las relaciones sexuales.",
+  "page3Card2Title": "Ginecología",
+  "page3Card2ShortText": "Campo de la medicina que se especializa en la atención de las mujeres durante el embarazo y el parto.",
+  "page3Card2LargeText": "Campo de la medicina que se especializa en la atención de las mujeres durante el embarazo y el parto. También se especializa en el diagnóstico de enfermedades de los órganos reproductivos femeninos.",
+  "page3Card3Title": "Labioplastia",
+  "page3Card3ShortText": "Es una cirugía vaginal para reducir el tamaño de los labios menores de la parte íntima de la mujer.",
+  "page3Card3LargeText": "Es una cirugía vaginal para reducir el tamaño de los labios menores de la parte íntima de la mujer. Que pueden haber aumentado de volumen y sobresalen sobre los labios mayores, a consecuencia normalmente de embarazos o traumas del parto u otro tipo de lesiones. ",
+  "page4CarouselTitle": "Métodos de rejuvenecimiento vaginal",
+  "carouselSlide1Title": "Vaginoplastia",
+  "carouselSlide1Text": "La vaginoplastia es una cirugía de rejuvenecimiento vaginal cuyo objetivo es corregir la distensión de los tejidos del canal vaginal y recuperar la tonicidad y capacidad de contracción de los músculos vaginales. La vaginoplastia es una cirugía de rejuvenecimiento vaginal cuyo objetivo es corregir la distensión de los tejidos del canal vaginal y recuperar la tonicidad y capacidad de contracción de los músculos vaginales.",
+  "carouselSlide2Title": "Perineoplastia",
+  "carouselSlide2Text": "La perineoplastia se denomina reparación funcional y estética del perineo, es decir, la zona que comprende desde el introito de la vagina hasta el ano. Su objetivo fundamental es corregir todos los daños producidos en el parto, así como reducir la amplitud del introito y erradicar los ruidos vaginales que se producen durante las relaciones sexuales.",
+  "carouselSlide3Title": "Labioplastia",
+  "carouselSlide3Text": "La labioplastia es una intervención quirúrgica que busca reducir el tamaño de los labios vaginales. Normalmente consiste en reducir los labios menores. La labioplastia es una intervención quirúrgica que busca reducir el tamaño de los labios vaginales. Normalmente consiste en reducir los labios menores.",
+  "carouselSlide4Title": "Himenoplastia",
+  "carouselSlide4Text": "La himenoplastia, también conocida como cirugía de restauración del himen, es una intervención quirúrgica que tiene como objetivo reconstruir dicha membrana cutánea situada en la mitad inferior de la vagina. La himenoplastia, también conocida como cirugía de restauración del himen, es una intervención quirúrgica que tiene como objetivo reconstruir dicha membrana cutánea situada en la mitad inferior de la vagina.",
+  "footerSubTitle": "Sigueme en mi red social de Instagram, para ver más contenido relacionado a mi servicio."
 }
