Co-authored-by: Carlos Collado <elhot896@users.noreply.github.com>

--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -1,6 +1,6 @@
 {
   "homeNav": "Home",
-  "aboutUsNav": "About us",
+  "aboutMeNav": "About me",
   "servicesNav": "Services",
   "contactUsNav": "Contact us",
   "locationNav": "Location",
@@ -17,13 +17,13 @@
   "page3ServiceTitle": "Our Services",
   "page3Card1Title": "Vaginoplasty",
   "page3Card1ShortText": "It is the aesthetic improvement by surgical means of the vulvar structures, designed to beautify and rejuvenate.",
-  "page3Card1LargeText": "It is the aesthetic improvement by surgical means of the vulvar structures, designed to beautify and rejuvenate. With this procedure, both the woman and her partner manage to increase and improve sexual relations.",
+  "page3Card1LargeText": "With this procedure, both the woman and her partner manage to increase and improve sexual relations.",
   "page3Card2Title": "Gynecology",
   "page3Card2ShortText": "A field of medicine that specializes in the care of women during pregnancy and childbirth.",
-  "page3Card2LargeText": "A field of medicine that specializes in the care of women during pregnancy and childbirth. He also specializes in the diagnosis of diseases of the female reproductive organs.",
+  "page3Card2LargeText": "He also specializes in the diagnosis of diseases of the female reproductive organs.",
   "page3Card3Title": "Labiaplasty",
   "page3Card3ShortText": "It is a vaginal surgery to reduce the size of the labia minora of the intimate part of the woman.",
-  "page3Card3LargeText": "It is a vaginal surgery to reduce the size of the labia minora of the intimate part of the woman. That may have increased in volume and protrude over the labia majora, normally as a result of pregnancy or birth trauma or other types of injuries. ",
+  "page3Card3LargeText": "That may have increased in volume and protrude over the labia majora, normally as a result of pregnancy or birth trauma or other types of injuries. ",
   "page4CarouselTitle": "Vaginal Rejuvenation Methods",
   "carouselSlide1Title": "Vaginoplasty",
   "carouselSlide1Text": "Vaginoplasty is a vaginal rejuvenation surgery whose objective is to correct the distension of the vaginal canal tissues and to recover the tonicity and contraction capacity of the vaginal muscles. Vaginoplasty is a vaginal rejuvenation surgery whose objective is to correct the distension of the vaginal canal tissues and to recover the tonicity and contraction capacity of the vaginal muscles.",
