--- a/src/languages/es.json
+++ b/src/languages/es.json
@@ -4,6 +4,9 @@
   "servicesNav": "Servicios",
   "contactUsNav": "Contáctanos",
   "locationNav": "Ubicación",
+  "contactInfo": "Teléfonos",
+  "locationInfo": "Ubícanos",
+  "locationBtn": "Abrir en Maps",
   "page1Title1": "CECIP",
   "page1Title2": "Cirujano ginecobstetra",
   "page1SubTitle": "Especialidad médica que se especializa en brindar atención a la mujer a lo largo de su vida, incluido el embarazo y el parto, así como brindar diagnóstico y tratamiento para las enfermedades de los órganos reproductores femeninos.",
@@ -13,7 +16,8 @@
   "page1VaginalRejuvenationButton": "Más información sobre el rejuvenecimiento vaginal",
   "page1PatientsSubtitle": "pacientes han elegido su servicio",
   "page2AboutTitle": "Sobre el Dr. Carlos Regalado",
-  "page2AboutText": "About Dr. Carlos Regalado",
+  "page2AboutText1": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.",
+  "page2AboutText2": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.",
   "page3ServiceTitle": "Nuestros servicios",
   "page3Card1Title": "Vaginoplastia",
   "page3Card1ShortText": "Es el mejoramiento estético por medio quirúrgico de las estructuras   vulvares, diseñado para embellecer y rejuvenecer",
