--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -12,7 +12,7 @@
   "page1SubTitle": "Medical specialty that specializes in providing care to women throughout their lives, including pregnancy and childbirth, as well as providing diagnosis and treatment for diseases of the female reproductive organs.",
   "page1EmailTitle": "Our email adress",
   "page1CopyButton": "Get Copied",
-  "page1CopyButton2": "Copied",
+  "page1CopyButton2": "Copied!",
   "page1VaginalRejuvenationButton": "Learn about vaginal rejuvenation",
   "page1PatientsSubtitle": "patients have chosen his service",
   "page2AboutTitle": "About Dr. Carlos Regalado",
