--- a/src/languages/es.json
+++ b/src/languages/es.json
@@ -12,7 +12,7 @@
   "page1SubTitle": "Especialidad médica que se especializa en brindar atención a la mujer a lo largo de su vida, incluido el embarazo y el parto, así como brindar diagnóstico y tratamiento para las enfermedades de los órganos reproductores femeninos.",
   "page1EmailTitle": "Nuestro email",
   "page1CopyButton": "Copiar",
-  "page1CopyButton2": "Copiado",
+  "page1CopyButton2": "Copiado!",
   "page1VaginalRejuvenationButton": "Más información sobre el rejuvenecimiento vaginal",
   "page1PatientsSubtitle": "pacientes han elegido su servicio",
   "page2AboutTitle": "Sobre el Dr. Carlos Regalado",
