--- a/src/languages/es.json
+++ b/src/languages/es.json
@@ -1,5 +1,5 @@
 {
-  "homeNav": "Home",
+  "homeNav": "Inicio",
   "aboutMeNav": "Sobre mí",
   "servicesNav": "Servicios",
   "contactUsNav": "Contáctanos",
