--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -10,7 +10,7 @@
   "page1Title1": "CECIP",
   "page1Title2": "OB/GYN Surgeon",
   "page1SubTitle": "Medical specialty that specializes in providing care to women throughout their lives, including pregnancy and childbirth, as well as providing diagnosis and treatment for diseases of the female reproductive organs.",
-  "page1EmailTitle": "Our email adress",
+  "page1EmailTitle": "My email adress:",
   "page1CopyButton": "Get Copied",
   "page1CopyButton2": "Copied!",
   "page1VaginalRejuvenationButton": "Learn about vaginal rejuvenation",
